# marketplace-opensource

./: .gitignore  README.md
contract/: Cargo.toml
contract/contracts/auction/: Cargo.toml
contract/contracts/auction/src/: auction.rs  contract.rs  error.rs  lib.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contract/scripts/: .gitignore  env.example  package.json
contract/scripts/src/: delist.ts  deploy_auction_mainnet.ts  deploy_auction_testnet.ts  deploy_nft.ts  migrate_auction.ts  place_bid.ts  set_royalty_admin.ts  set_royalty_fee.ts  util.ts
contract/wasm/: auction_2.0.wasm  cw1155_base.wasm  cw2981_royalties.wasm  cw721_metadata_onchain.wasm
interface/: Dockerfile  cloudbuild.yaml  next.config.js  package.json  tsconfig.json
interface/pages/: _app.tsx  _document.tsx  index.tsx
interface/pages/auction/: [auctionId].tsx
interface/pages/market/: index.tsx
interface/pages/my-nft/: index.tsx
interface/src/: GlobalStyle.tsx  styles.css  theme.ts
interface/src/@types/: emotion.d.ts  global.d.ts
interface/src/components/: CountdownBox.tsx  CurrencyInput.tsx
interface/src/constants/: Routes.ts  address.ts  auctionStateComponent.ts  bid.ts  gas.ts  ipfs.ts  networks.ts  quote.ts  regex.ts  spaceloot.json
interface/src/core/: CoreBreadcrumbs.tsx  CoreDialog.tsx  CoreSpinner.tsx
interface/src/hooks/: useMyNft.ts  useSetup.ts
interface/src/interfaces/: auction.interface.ts  nft.interface.ts
interface/src/services/: localStorage.ts
interface/src/stores/: dialogStore.ts  loadingStore.ts
interface/src/styles/: asteroid.scss  rarity-card.scss
interface/src/utils/: address.util.ts  auction.util.ts  currency.util.ts  getError.ts  (+4 more)
(+28 files in other folders)
